force-app/main/default/objects/SVMXC__SM_Attributes_Template__c/SVMXC__SM_Attributes_Template__c.object-meta.xml
<CustomObject>
    <description>Object to hold JSON payload template to for product, product line and family. Template is created via Product Template Setup</description>
    <label>Attributes Template</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Attributes Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributes Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>