force-app/main/default/objects/SVMXC__SM_Attributes_Template__c/fields/SVMXC__SM_Template_Json__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Template_Json__c</fullName>
    <description>JSON template for a product, product line, family, name and code</description>
    <label>Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>