force-app/main/default/objects/SVMXC__SM_Attributes_Template__c/fields/SVMXC__SM_Title__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>